# Dactim-angio

./: .gitignore
data/: generate_manifest.py
data/example/post_thrombec_dsa_raw_front_nifti/: Patient_2.json
data/example/post_thrombec_dsa_raw_sagit_nifti/: Patient_2.json
data/experiment3/: manifest.json
html/: index.html
results/: output.json  reg_parameters_full_database.json
results/figures_full_database/: manifest.json
src/: LICENSE  README.md  pyproject.toml
src/TOF_XA_registration/: input_files_setup.json  make_figures.py  preproc.py  registration_both_sides.py  utils.py
src/TOF_XA_registration/_monitoring/: monitor.html
src/dactim_angio/: RBF.py  Thématiques  geom.py  grid.py  metrics.py  metrics_complex.py  sampler.py
src/dactim_angio/postProcess/: registration.py
src/dactim_angio/process/: postTOF.py  postXA.py  preproc.py
src/dactim_angio/registration/: sampler.py
src/dactim_angio/spatial/: RBF.py  geom.py  grid.py
src/tests/: MIRES-figures.py  example_from_data.py  geom_tests.py  spatial_grid_simple_tests.py  test_metrics_gradients.py  test_sampler_gradients.py
